[gd_scene load_steps=10 format=2]

[ext_resource path="res://Defence/Cannon/TurretCannon.gd" type="Script" id=2]
[ext_resource path="res://Enemies/laserLarge_003.ogg" type="AudioStream" id=3]
[ext_resource path="res://Defence/Cannon/TurretCannon.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 3 )
random_pitch = 1.3

[sub_resource type="Animation" id=4]
resource_name = "build"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [ true ],
"method": "set_physics_process"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Turret:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "sell"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [ true ],
"method": "set_physics_process"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 18, 17, 16, 15 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Turret:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10 ]
}

[node name="TurretCannon" type="StaticBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Turret" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -32, -32 )
hframes = 5
vframes = 6

[node name="Muzzle" type="Position2D" parent="Turret"]
visible = false
position = Vector2( 29, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
visible = false
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 11

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -32, -32 )
hframes = 5
vframes = 6
frame = 5

[node name="Turret_Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret_Vision"]
shape = SubResource( 2 )

[node name="WeaponShootTimer" type="Timer" parent="."]

[node name="ShootFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
bus = "SoundEffects"

[node name="TargetListTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/build = SubResource( 4 )
anims/hit = SubResource( 6 )
anims/sell = SubResource( 5 )

[connection signal="body_exited" from="Turret_Vision" to="." method="_on_Turret_Vision_body_exited"]
[connection signal="timeout" from="WeaponShootTimer" to="." method="_on_WeaponShootTimer_timeout"]
[connection signal="timeout" from="TargetListTimer" to="." method="_on_TargetListTimer_timeout"]
